--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_DB_URI=mongodb+srv://root:3JmCLTc6mEjA52CF@cluster0.eqerh.mongodb.net/?retryWrites=true&w=majority
+MONGO_DB_URI=mongodb+srv://root:3JmCLTc6mEjA52CF@cluster0.eqerh.mongodb.net/devyapp
 HOST=http://localhost:4000
